		If changing the path in an existing file area, the files in
		that area are moved to the new path.
		It is now possible to move file areas.

	mbfido:
		In AreaMgr and FileMgr changed aka matching for area 
		connections. Code cleanups.
		In FileMgr when %tick=on/off command was received, mbfido
		crashed.
		Implemented auto area create comparing a new received echo
		from a uplink which has a echomail taglist in one of the
		mailgroups defined. The area is created with the defaults
		from the mailgroup.
		If mbfido fails to unzip a incoming mailarchive, a second
		attempt is done after a sync() and one second delay. This
		seems to be a kernel flush problem.
		In the To field of a created TIC file there is now a comma
		between the sysop name and fidonet aka.
		When creating a filefind netmail reply there was no 
		destination address.
		Corrected spelling errors in the Areamgr and Filemgr help
		messages.

	mball:
		Will not crash anymore when it needs more then 10 minutes to
		create the allfiles and newfiles lists.

	mbtask:
		Removed some debug logging.
		Creates the semafore is_inet when the internet connections is
		available, and removes it when it is down.
		Added test for ISDN/modem lines in use.
		Lost of code cleanup.
		No setup setting anymore for maximum POTS and ISDN lines, this
		is now automatic.

	mbcico:
		Fixed binkp driver to accept incoming unprotected sessions.
		Temporary added extra password handling logs.
		If a binkp session comes in and there already is a session
		with that node, mbcico stopts the binkp session with an error.
		
	mbsebbs:
		On some systems the download taglists contained garbage after
		the short filename causing wrong filenames at the users side.

	mbuser:
		If a new user has registered and not yet used the bbs, mbuser
		would kill that user because the last login date wasn't set.
		It will use the registration date instead.

	hatch:
		A new shellscript to hatch files in a tic area.
