@@ -39,7 +39,7 @@ H_IMAGES	= images/b_arrow.gif  images/magic.gif        images/nodes1.gif \
 		  images/hatch.gif    images/nodelist4.gif    images/tty3.gif \
 		  images/language.gif images/nodelist5.gif    images/uarrow.gif \
 		  images/larrow.gif   images/nodes.gif        images/users.gif \
-		  images/mbse.jpg     images/taskmgr.gif      images/mbsebbs.gif \
+		  images/mbse.jpg     images/taskmgr.png      images/mbsebbs.gif \
 		  images/mbsebbs.png  images/users2.gif \
 		  images/dream1.png   images/dream2.png       images/dream3.png \
 		  images/tdream1.gif  images/tdream2.gif      images/tdream3.gif
