@@ -4644,6 +4644,8 @@ v0.33.20        10-Feb-2002
 		Lost of code cleanup.
 		No setup setting anymore for maximum POTS and ISDN lines, this
 		is now automatic.
+		mbtask will now update internal counters how many ISDN and POTS
+		lines are free to use for dialout.
 
 	mbcico:
 		Fixed binkp driver to accept incoming unprotected sessions.
